--- a/docs/_static/css/pgmlab.css
+++ b/docs/_static/css/pgmlab.css
@@ -33,9 +33,10 @@
 
 .header-title{   
 
-    width: 60%; 
+    width: 60vw; 
    padding-left: 5%;
-        min-width: 450px;
+        min-width: 400px;
+
 
 
 
@@ -100,7 +101,8 @@
 }
 
 .research-block{
-	width: 400px;
+	width: 90%;
+    max-width: 400px;
     padding-top: 0px; 
     padding-left: 5vw;
     padding-right: 5vw;
