--- a/docs/_static/css/pgmlab.css
+++ b/docs/_static/css/pgmlab.css
@@ -573,23 +573,30 @@ vertical-align: middle;
   padding-left: 5%;
 }
 
-#contact p, #contact img{
+#contact p{
   margin-left: 5%;
+  font-size: medium;
+}
+
+#contact img{
+  margin-left: 5%;
+}
+
+#contact a{
+  color: white;
 }
 
 .contact-block{
 	width: 100%;
-  padding-top: 50px;
   padding-left: 0px;
   padding-right: 40px;
-  padding-bottom: 10px;
 	display: inline-block;
 }
 
 .contact-image{
-	width: 30%;
+	width: 10%;
   padding: 0 0 0 0;
-  margin: 0 auto;
+  margin-left: 2%;
   display: inline-block;
 }
 
@@ -599,7 +606,8 @@ vertical-align: middle;
 	display: inline-block;
   vertical-align: middle;
   text-align: left;
-  margin-left: 5%;
+  font-weight: bold;
+  font-size: large;
 }
 
 /* Google maps */
