--- a/docs/_static/css/pgmlab.css
+++ b/docs/_static/css/pgmlab.css
@@ -395,10 +395,9 @@ vertical-align: middle;
 
 
 
-
 /***************/
 
-#consulting {
+#consultancy {
     background-color: #484F5F;
     padding-top: 20px;
     padding-left: 0px;
@@ -409,13 +408,13 @@ vertical-align: middle;
 
 }
 
-#consulting h1{
+#consultancy h1{
     text-align: left;
     padding-left: 5%;
 }
 
 
-.consulting-block{
+.consultancy-block{
     width: 90%;
 	  max-width: 550px;
     padding-top: 80px;
@@ -427,7 +426,7 @@ vertical-align: middle;
 
 }
 
-.consulting-image{
+.consultancy-image{
 	  width: 30%;
     padding-top: 0px;
     padding-left: 0px;
@@ -440,7 +439,7 @@ vertical-align: middle;
     margin-top: 0px;
 }
 
-.consulting-text{
+.consultancy-text{
 	  width: 60%;
     padding-top: 0px;
     padding-left: 0px;
@@ -556,6 +555,38 @@ vertical-align: middle;
   font-weight: bold;
 }
 
+.people-mail{
+  text-align: center;
+}
+
+.mail-icon{
+  width: 20%;
+  display: inline-block;
+}
+
+.mail-text{
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.people-social{
+  text-align: center;
+}
+
+.social-github{
+  width: 20%;
+  display: inline-block;
+}
+
+.social-linkedin{
+  width: 20%;
+  display: inline-block;
+}
+
+.social-scholar{
+  width: 20%;
+  display: inline-block;
+}
 
 /**********/
 
