Adding all the icons in the People section

--- a/docs/_static/css/pgmlab.css
+++ b/docs/_static/css/pgmlab.css
@@ -588,6 +588,11 @@ vertical-align: middle;
   display: inline-block;
 }
 
+.social-website{
+  width: 20%;
+  display: inline-block;
+}
+
 /**********/
 
 
